--- a/water/water.ioc
+++ b/water/water.ioc
@@ -1,54 +1,64 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.ContinuousConvMode=ENABLE
+ADC.IPParameters=ContinuousConvMode
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-I2C2.IPParameters=Timing
-I2C2.Timing=0x20303E5D
 KeepUserPlacement=false
 Mcu.CPN=STM32F072RBT6
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
-Mcu.IP1=I2C2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TSC
-Mcu.IP8=USB
-Mcu.IPNb=9
+Mcu.IP1=NVIC
+Mcu.IP10=USB
+Mcu.IP2=RCC
+Mcu.IP3=SPI2
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM14
+Mcu.IP9=TSC
+Mcu.IPNb=11
 Mcu.Name=STM32F072R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PB15
-Mcu.Pin17=PC6
-Mcu.Pin18=PC7
-Mcu.Pin19=PC8
+Mcu.Pin10=PA7
+Mcu.Pin11=PC5
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PB15
+Mcu.Pin19=PC6
 Mcu.Pin2=PC2
-Mcu.Pin20=PC9
-Mcu.Pin21=PA8
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin20=PC7
+Mcu.Pin21=PC8
+Mcu.Pin22=PC9
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PA0
+Mcu.Pin30=PB3
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PC5
-Mcu.PinsNb=28
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072RBTx
@@ -68,6 +78,8 @@ PA0.Signal=GPXTI0
 PA1.Locked=true
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
+PA10.Locked=true
+PA10.Signal=S_TIM1_CH3
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USBF4_DM
 PA11.Locked=true
@@ -94,31 +106,28 @@ PA2.Signal=TSC_G1_IO3
 PA3.Locked=true
 PA3.Mode=G1_IO4-Sampling
 PA3.Signal=TSC_G1_IO4
+PA4.Signal=S_TIM14_CH1
+PA5.Signal=S_TIM2_CH1_ETR
 PA6.Locked=true
 PA6.Mode=G2_IO3-Channel
 PA6.Signal=TSC_G2_IO3
 PA7.Locked=true
 PA7.Mode=G2_IO4-Sampling
 PA7.Signal=TSC_G2_IO4
+PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
+PA9.Locked=true
+PA9.Signal=S_TIM1_CH2
 PB0.Locked=true
 PB0.Mode=G3_IO2-Channel
 PB0.Signal=TSC_G3_IO2
 PB1.Locked=true
 PB1.Mode=G3_IO3-Sampling
 PB1.Signal=TSC_G3_IO3
-PB10.GPIOParameters=GPIO_Label,GPIO_Pu
-PB10.GPIO_Label=I2C2_SCL[EXT/RF-E2P_SCL]
-PB10.GPIO_Pu=GPIO_PULLUP
 PB10.Locked=true
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
-PB11.GPIOParameters=GPIO_Label,GPIO_Pu
-PB11.GPIO_Label=I2C2_SDA[EXT/RF-E2P_SDA]
-PB11.GPIO_Pu=GPIO_PULLUP
+PB10.Signal=S_TIM2_CH3
 PB11.Locked=true
-PB11.Mode=I2C
-PB11.Signal=I2C2_SDA
+PB11.Signal=S_TIM2_CH4
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=SPI2_SCK [L3GD20_SCL/SPC]
 PB13.Locked=true
@@ -134,6 +143,7 @@ PB15.GPIO_Label=SPI2_MOSI [L3GD20_SDA/SDI]
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
+PB3.Signal=S_TIM2_CH2
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=NCS_MEMS_SPI [L3GD20_CS_I2C/SPI]
 PC0.Locked=true
@@ -152,22 +162,14 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=EXT_RESET [EXT/RF-E2P_EXT_RESET]
 PC5.Locked=true
 PC5.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=LD3 [Red Led]
 PC6.Locked=true
-PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=LD6 [Blue Led]
+PC6.Signal=S_TIM3_CH1
 PC7.Locked=true
-PC7.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=LD4 [Orange Led]
+PC7.Signal=S_TIM3_CH2
 PC8.Locked=true
-PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=LD5 [GReen Led]
+PC8.Signal=S_TIM3_CH3
 PC9.Locked=true
-PC9.Signal=GPIO_Output
+PC9.Signal=S_TIM3_CH4
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -196,7 +198,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TSC_Init-TSC-false-HAL-true,6-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM14_Init-TIM14-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -223,8 +225,30 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
+SH.S_TIM14_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CalculateBaudRate=12.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
@@ -232,13 +256,37 @@ SPI2.IPParameters=CalculateBaudRate,Mode,BaudRatePrescaler,VirtualType,Direction
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.IPParameters=Period,Channel-PWM Generation3 CH3,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM1.Period=4100
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel,Period
+TIM14.Period=4100
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period
+TIM2.Period=4100
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period
+TIM3.Period=4100
 USB.IPParameters=phy_itface,speed
 USB.phy_itface=PCD_PHY_EMBEDDED
 USB.speed=PCD_SPEED_FULL
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=STM32F072B-DISCO
 boardIOC=true
