--- a/water/water.ioc
+++ b/water/water.ioc
@@ -4,22 +4,34 @@ ADC.IPParameters=ContinuousConvMode
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=TIM1_CH4/TRIG/COM
+Dma.RequestsNb=1
+Dma.TIM1_CH4/TRIG/COM.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH4/TRIG/COM.0.Instance=DMA1_Channel4
+Dma.TIM1_CH4/TRIG/COM.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH4/TRIG/COM.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH4/TRIG/COM.0.Mode=DMA_NORMAL
+Dma.TIM1_CH4/TRIG/COM.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH4/TRIG/COM.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH4/TRIG/COM.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM1_CH4/TRIG/COM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F072RBT6
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
-Mcu.IP1=NVIC
-Mcu.IP10=USB
-Mcu.IP2=RCC
-Mcu.IP3=SPI2
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM14
-Mcu.IP9=TSC
-Mcu.IPNb=11
+Mcu.IP1=DMA
+Mcu.IP10=TIM15
+Mcu.IP11=TSC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM14
+Mcu.IPNb=12
 Mcu.Name=STM32F072R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -42,16 +54,16 @@ Mcu.Pin23=PA8
 Mcu.Pin24=PA9
 Mcu.Pin25=PA10
 Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PB3
 Mcu.Pin3=PA0
-Mcu.Pin30=PB3
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
@@ -64,6 +76,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F072RBTx
 MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
+NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -80,16 +93,8 @@ PA1.Mode=IN1
 PA1.Signal=ADC_IN1
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=USBF4_DM
 PA11.Locked=true
-PA11.Mode=Device
-PA11.Signal=USB_DM
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=USBF4_DP
-PA12.Locked=true
-PA12.Mode=Device
-PA12.Signal=USB_DP
+PA11.Signal=S_TIM1_CH4
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
 PA13.Locked=true
@@ -198,7 +203,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM14_Init-TIM14-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TSC_Init-TSC-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM14_Init-TIM14-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -233,6 +238,8 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
+SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
@@ -258,8 +265,9 @@ SPI2.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.IPParameters=Period,Channel-PWM Generation3 CH3,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
-TIM1.Period=4100
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Period,Channel-PWM Generation3 CH3,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4
+TIM1.Period=100
 TIM14.Channel=TIM_CHANNEL_1
 TIM14.IPParameters=Channel,Period
 TIM14.Period=4100
@@ -275,13 +283,12 @@ TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period
 TIM3.Period=4100
-USB.IPParameters=phy_itface,speed
-USB.phy_itface=PCD_PHY_EMBEDDED
-USB.speed=PCD_SPEED_FULL
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM15_VS_ClockSourceINT.Mode=Internal
+VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
